--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="profile">
         <div class="profile_container">
           <div class="profile_profileImg">
-            <img src="./images/profileimage.png" alt="jeric javier" />
+            <img src="./images/profileImage.png" alt="jeric javier" />
           </div>
           <div>
             <h1 class="profile_name">
